--- a/GitTest/Base.lproj/Main.storyboard
+++ b/GitTest/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QhO-Ek-hqv">
-                                <rect key="frame" x="254" y="278" width="92" height="43"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QhO-Ek-hqv">
+                                <rect key="frame" x="268" y="284.5" width="64" height="30"/>
                                 <state key="normal" title="Press me"/>
                                 <connections>
                                     <action selector="mainButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F7H-jv-uSk"/>
@@ -25,6 +25,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QhO-Ek-hqv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9l7-m0-Ymo"/>
+                            <constraint firstItem="QhO-Ek-hqv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="evH-LW-ArS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
